--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+flask = "*"
+unicornhat = "*"
 
 [dev-packages]
+autopep8 = "*"
+pylint = "*"
 
 [requires]
 python_version = "3.7"
